--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
@@ -42,6 +43,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prisma": "^4.16.0",
+    "shadcn-ui": "^0.1.3",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
