--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "shadcn-ui": "^0.2.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
