--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "preview": "next build && next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
+    "postinstall": "prisma generate --accelerate"
   },
   "dependencies": {
-    "@prisma/client": "4.16.0",
+    "@prisma/client": "^5.2.0",
+    "@prisma/extension-accelerate": "^0.6.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.6.0",
@@ -43,7 +45,7 @@
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "prisma": "^4.16.0",
+    "prisma": "^5.2.0",
     "shadcn-ui": "^0.2.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
