--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@prisma/extension-accelerate": "^0.6.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "chart.js": "^4.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.252.0",
     "next": "^13.4.19",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.13.2",
