--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/extension-accelerate": "^0.6.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/analytics": "^1.0.2",
     "chart.js": "^4.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
